--- a/css/hyde.css
+++ b/css/hyde.css
@@ -202,6 +202,7 @@ a:focus {
   margin: 0px;
   padding: 0px;
   color: rgba(255,255,255,.5);
+  vertical-align: text-top;
 }
 .colophon-links {
   margin: 0px;
