--- a/css/hyde.css
+++ b/css/hyde.css
@@ -223,6 +223,7 @@ a:focus {
 @media (min-width: 990px) {
   /* Fix the masthead to the side for impact and awesomeness */
   .masthead {
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
@@ -230,7 +231,6 @@ a:focus {
     margin-bottom: 0;
   }
   .masthead-inner {
-    position: absolute;
     bottom: 0;
     right: 0;
     left: 0;
