--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,11 @@
             <li>
               <a href="/building-blocks.html">Building Blocks</a> <span style="font-size: 12px;">(<a href="/data/buildingblocks.json">JSON</a>)</span>
             </li>
+            <li>
+              <a href="/journey/index.html">Journey</a>
+            </li>
             <li style="padding-top: 10px;">
-              <a href="http://apievangelist.com"><< Return to API Evangelist</a>
+              <a href="http://apievangelist.com" style="font-size: 16px;"><< Return to API Evangelist</a>
             </li>
           </ul>
         </div>
